--- a/shareWeb/fastFile/templates/fastFile/index.html
+++ b/shareWeb/fastFile/templates/fastFile/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% load static %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'fastFile/index.css'%}">
+<link rel="stylesheet" href="{% static 'fastFile/css/index.css'%}">
 {% endblock %}
 {% block body %}
 
