--- a/shareWeb/fastFile/templates/fastFile/perfil.html
+++ b/shareWeb/fastFile/templates/fastFile/perfil.html
@@ -1,7 +1,7 @@
 {% extends "fastFile/layout.html" %}
 
 {% block title %}
-    fastFile
+   perfil
 {% endblock %}
 
 {% block meta %}
@@ -11,8 +11,8 @@
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static 'fastFile/perfil.css'%}">
-    <link rel="stylesheet" href="{% static 'fastFile/index.css'%}">
+    <link rel="stylesheet" href="{% static 'fastFile/css/perfil.css'%}">
+    <link rel="stylesheet" href="{% static 'fastFile/css/index.css'%}">
 {% endblock %}
 
 {% block body %}
