--- a/shareWeb/fastFile/templates/fastFile/register.html
+++ b/shareWeb/fastFile/templates/fastFile/register.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% load static %}
 {% block style %}
-    <link rel="stylesheet" href="{% static 'fastFile/login.css'%}">
+    <link rel="stylesheet" href="{% static 'fastFile/css/login.css'%}">
 {% endblock %}
 {% block body %}
 <div id="div-form-login">
