--- a/shareWeb/fastFile/templates/fastFile/upload.html
+++ b/shareWeb/fastFile/templates/fastFile/upload.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static 'fastFile/upload.css' %}">
+    <link rel="stylesheet" href="{% static 'fastFile/css/upload.css' %}">
 {% endblock %}
 
 {% block body %}
