--- a/shareWeb/fastFile/templates/fastFile/file.html
+++ b/shareWeb/fastFile/templates/fastFile/file.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block style %}
-<link rel="stylesheet" href="{% static 'fastFile/file.css'%}">
+<link rel="stylesheet" href="{% static 'fastFile/css/file.css'%}">
 {% endblock %}
 
 {% block body %}
