--- a/shareWeb/fastFile/templates/fastFile/layout.html
+++ b/shareWeb/fastFile/templates/fastFile/layout.html
@@ -7,7 +7,7 @@
         {% block meta %}
         {% endblock %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'fastFile/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'fastFile/css/styles.css' %}" rel="stylesheet">
         {% block style %}
 
         {% endblock %}
