--- a/shareWeb/fastFile/static/fastFile/css/settings.css
+++ b/shareWeb/fastFile/static/fastFile/css/settings.css
@@ -11,7 +11,7 @@ body{
 
 }
 h1{
-    color: rgb(255, 228, 179);
+    color: rgb(255, 195, 83);
 }
 menu{
     height: 60%;
@@ -29,6 +29,7 @@ menu{
 }
 .li-settings:hover{
     color: rgb(161, 161, 255);
+    text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.158);
 }
 .li-settings-before::before{
     color: orange;
@@ -43,3 +44,31 @@ footer{
     box-shadow: 0px -1px 1px rgba(0, 0, 0, 0.073)
     
 }
+.form-dialog{
+    position: absolute;
+    border-radius: 5px;
+    padding: 2px;
+    top:10%;
+    width: 20%;
+    height: 25%;
+    left: 40%;
+    
+}
+form{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+form input{
+    display: block;
+    height: 20%;
+    margin: 2%;
+    background-color: rgb(219, 219, 255);
+}
+form input[type='submit']{
+    width: 50%;
+    height: 15%;
+    
+}
+
