atualizando gitignore e fazendo check dos inputs do lsettings

--- a/shareWeb/fastFile/templates/fastFile/login.html
+++ b/shareWeb/fastFile/templates/fastFile/login.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block style %}
-    <link rel="stylesheet" href="{% static 'fastFile/css/login.css'%}">
+    <link rel="stylesheet" href="{% static 'fastFile/css/login.css'%}"
 {% endblock %}
 
 {% block body %}
