--- a/shareWeb/fastFile/static/fastFile/css/settings.css
+++ b/shareWeb/fastFile/static/fastFile/css/settings.css
@@ -47,11 +47,14 @@ footer{
 .form-dialog{
     position: absolute;
     border-radius: 5px;
-    padding: 2px;
+    padding: 2px 2px 2px 5px;
     top:10%;
     width: 20%;
     height: 25%;
     left: 40%;
+    background-color: rgb(255, 244, 227);
+    box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.295);
+    border: none;
     
 }
 form{
@@ -59,16 +62,25 @@ form{
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 form input{
     display: block;
     height: 20%;
-    margin: 2%;
     background-color: rgb(219, 219, 255);
+    border: none;
+    padding: 3px;
 }
 form input[type='submit']{
     width: 50%;
     height: 15%;
+    padding: none;
+    
+}
+
+form input[type='submit']:hover{
+    background-color: rgb(187, 187, 255);
     
 }
 
