--- a/shareWeb/fastFile/templates/fastFile/layout.html
+++ b/shareWeb/fastFile/templates/fastFile/layout.html
@@ -27,32 +27,33 @@
                     </li>
                     
                         {% if inbox %}
-                    <li class="nav-item" id="inbox-li">
-                        <strong class="nav-link"  id="inbox-icon" style="cursor: pointer;">&#128231;</strong>
-                        <dialog id="inbox">
-                            {% for upload in uploads %}
-                                {% for defendant in upload.messages.all  %}
-                                <article>
-                                    <div class="span-request">
-                                    <span id="span-name-user">{{defendant.username}}</span> <b style="display: inline;">request</b> <span id="span-name-file">{{upload.name}}</span>
-                                    </div>
-                                    <div class="div-request">
-                                        <button class="btn-decision" style="color: greenyellow;" data-decision="true"><b>&#10003;</b></button>
-                                        <button class="btn-decision" style="color: red;" data-decision="false"><b>X</b></button>
-                                    </div>
-                                </article>
-                                    
-                                    
-                                {% endfor %}
+                            <li class="nav-item" id="inbox-li">
+                                <strong class="nav-link"  id="inbox-icon" style="cursor: pointer;">&#128231;</strong>
+                                <dialog id="inbox">
+                            {% for message in messages %}
+
+                                        <article>
+                                            <div class="span-request">
+                                            <span id="span-name-user">{{message.message}}</span>
+                                            </div>
+                                            {% if message.file %}
+                                                <div class="div-request">
+                                                    <button class="btn-decision" style="color: greenyellow;" data-decision="true"><b>&#10003;</b></button>
+                                                    <button class="btn-decision" style="color: red;" data-decision="false"><b>X</b></button>
+                                                </div>
+                                            {% endif %}
+                                        </article>
+                            
+                             
+                                    {% empty %}
                                 
-                                {% empty %}
                                     
                             {% endfor %}
-                        </dialog>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'settings' %}"><b>&#9881;</b></a>
-                    </li> 
+                                </dialog>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'settings' %}"><b>&#9881;</b></a>
+                            </li> 
                         {% endif %}
                     
                     
