--- a/shareWeb/fastFile/templates/fastFile/layout.html
+++ b/shareWeb/fastFile/templates/fastFile/layout.html
@@ -32,8 +32,9 @@
                                 <dialog id="inbox">
                             {% for message in messages %}
 
-                                        <article>
+                                        <article data-id="message.id">
                                             <div class="span-request">
+                                            <span>{{message.sendAt}}</span>
                                             <span id="span-name-user">{{message.message}}</span>
                                             </div>
                                             {% if message.file %}
