Edit layout.html but yet with bugs in template

--- a/shareWeb/fastFile/templates/fastFile/index.html
+++ b/shareWeb/fastFile/templates/fastFile/index.html
@@ -51,10 +51,10 @@
     </div> 
     <div class="infos">
         <div class="requireds">
-        {% if file.password is  not None  %}
+        {% if file.password != ''  %}
             {% if request.user not in file.allowedUsers.all  %}
                 <span class="lock">&#128274;</span>
-            {% else%}           
+            {% else %}           
                 <span>&#10003;</span>
             {% endif%}
         {% endif %}
