--- a/shareWeb/fastFile/templates/fastFile/perfil.html
+++ b/shareWeb/fastFile/templates/fastFile/perfil.html
@@ -48,11 +48,12 @@
                  
         </a>
         <div class="infos">
-            <span>{{file.postedBy}}</span>  <span>{{file.postedAt}}</span> <span>{{file.downloadsCount}}</span>
+            <span>{{file.postedBy}}</span>  <span>{{file.postedAt}}</span> <span>{{file.downloadsCount}}</span> 
         </div> 
         <div class="infos">
             <div class="requireds">
-            {% if file.password is  not None  %}
+            {% if file.password != ''  %}
+                
                 {% if request.user not in file.allowedUsers.all  %}
                     <span class="lock">&#128274;</span>
                 {% else%}           
