API allowuser finalizada

--- a/shareWeb/fastFile/templates/fastFile/layout.html
+++ b/shareWeb/fastFile/templates/fastFile/layout.html
@@ -39,10 +39,10 @@
                                     </div>
 
                                     <div class="div-request">
-                                        <button class="btn-decision" style="color: greenyellow;" data-decision="true">
+                                        <button class="btn-decision" style="color: greenyellow;" data-decision="True">
                                             <b>&#10003;</b>
                                         </button>
-                                        <button class="btn-decision" style="color: red;" data-decision="false">
+                                        <button class="btn-decision" style="color: red;" data-decision="">
                                             <b>X</b>
                                         </button>
                                     </div>
