add view delete message

--- a/shareWeb/fastFile/templates/fastFile/layout.html
+++ b/shareWeb/fastFile/templates/fastFile/layout.html
@@ -52,7 +52,7 @@
                             {% endfor %}
                             {% for message in messages %}
 
-                                        <article data-id="message.id">
+                                        <article class="messagesArticle" data-id="message.id">
                                             <div class="span-request">
                                             <span>{{message.sendAt}}</span>
                                             <span class="span-name-user">{{message.message}}</span>
